update about.md and 2023-04-03-post.md

--- a/_posts/2023-04-03-post.md
+++ b/_posts/2023-04-03-post.md
@@ -10,23 +10,23 @@ tags:
   - Experience
 ---
 
-# 23Fall申请回忆录
+# 23Fall 申请回忆录
 
 #### *By [Mariana](https://mariana2000.github.io/)*
 
 #### *Date: 2023.2.27*
-#### *Last Update: 2023.4.3*
+#### *Last Update: 2023.4.4*
 
 ## 写在前面
-众所周知你清没有统计本科，但统辅一直是校内辅修的热门选项。或许是由于周老师经常在课上宣传统辅的含金量(x)，并提过有同学通过修了统辅研究生转申到了统计方向，这条路一直有人尝试，也某种程度上影响了我走了转申统计这条路。但实际开始准备时，才发现情况比想象的要复杂：转专业申请很难准确定位，对于stat/biostat各个项目的申请难度没有明确的认识，缺少thu往年转专业（或者没转专业）申请统计的样本等等。这些信息的缺乏导致我在申请初期走了一些弯路，并且也经历了一段时间的挣扎。现在申请季接近结束，经历了这个匆忙而又曲折的申请季，有很多东西想要分享，也想借这个平台贡献一下自己的data point，供后来走这条路的学弟学妹们参考。
+众所周知你清没有统计本科，但统辅一直是校内辅修的热门选项。或许是由于周老师经常在课上宣传统辅的含金量(x)，并提过有同学通过修了统辅研究生转申到了统计方向，这条路一直有人尝试，也某种程度上影响了我走了转申统计这条路。但实际开始准备时，才发现情况比想象的要复杂：转专业申请很难准确定位，对于 stat/biostat 各个项目的申请难度没有明确的认识，缺少 thu 往年转专业（或者没转专业）申请统计的样本等等。这些信息的缺乏导致我在申请初期走了一些弯路，并且也经历了一段时间的挣扎。现在申请季接近结束，经历了这个匆忙而又曲折的申请季，有很多东西想要分享，也想借这个平台贡献一下自己的 data point，供后来走这条路的学弟学妹们参考。
 
 ## 个人背景
-- THU 传统工科+统计辅修
+- THU 传统工科 + 统计辅修
 - 申请方向：美国 stat/biostat ms/phd混申
 - GPA: 3.72 (WES后3.74，均为申请时)，排名：33%左右
 - TOEFL: 102 (R30+L24+S22+W26)
 - GRE: V154+Q169+AW3.5
-- 科研背景: 大二本校水科研SRT一段，无成果; 大三上开始跟本校统计中心老师做科研，申请时有一篇其他作者的journal paper在投，一篇一作methodology paper在写; 大三暑假跟UPenn老师远程暑研，无产出
+- 科研背景: 大二本校本系水科研 SRT 一段，无成果; 大三上开始跟本校统计中心老师做科研，申请时有一篇其他作者的 journal paper 在投，一篇一作 methodology paper 在写; 大三暑假跟 UPenn 老师远程暑研，无产出
 - 推荐信: 暑研老板科研推（强度不高）+本校老板科研推（强推）+一封课程推（上过初概、因果和贝叶斯，关系很好的wljj）
 - 无交换&实习
 
@@ -46,55 +46,55 @@ tags:
 以下是一些杂谈，我打算先讲讲自己general的timeline，然后集中总结/讨论一些topic。
 
 ## Timeline:
-这个timeline不仅仅是关于申请季，也大概是我自己对于本科四年**都干了些什么**的简单总结。因为感觉自己没有时间和精力像n+e学长那样给每一个学期都写一个详细的[回忆录](https://trinkle23897.github.io/)，因此就在这里夹带一点私货(x)
+这个 timeline 不仅仅是关于申请季，也大概是我自己对于本科四年**都干了些什么**的简单总结。因为感觉自己没有时间和精力像n+e学长那样给每一个学期都写一个详细的 [回忆录](https://trinkle23897.github.io/)，因此就在这里夹带一点私货(x)
 
 每个学期其实多多少少都有个主题，但这更像是经历了这些之后总结出来的后验主题而不是一开始就知道自己该做什么而进行的规划，蚌）
 
 + **大一+大二上：体验大学生活及本专业科研，后被劝退**
 
-  作为小镇做题家，刚入学时对专业和未来想学什么做什么完全没有概念。带着高中的思维和心态过完了第一个学期，然而绩点也没有卷过别人，蚌。不过本专业大家比较摆烂，所以rank也一直在30%-40%的样子徘徊。好在数学课成绩都不错，为后面转stat方向打下了点基础。大一下遭遇了covid，在家待了一学期，基本是摆烂，好在数学课成绩也混的还行。这期间稍微接触了一点ML的东西，学了点皮毛。大二上回到学校，和几个同学报了本系老师的一个SRT项目，然而指导的博士生学长画完饼之后完全没有提供什么指导，项目就一直吊在那里（到最后这个半年的SRT项目拖了整整一年才结项，让我对SRT产生了极强的厌恶心理）。同时这学期一门专业课吃了超级低分，差点挂科，一时间万念俱灰，觉得无论如何不能在这个专业待下去了，遂萌生转专业的想法。
+  作为小镇做题家，刚入学时对专业和未来想学什么做什么完全没有概念。带着高中的思维和心态过完了第一个学期，然而绩点也没有卷过别人，蚌。不过本专业大家比较摆烂，所以 rank 也一直在 30%-40% 的样子徘徊。好在数学课成绩都不错，为后面转 stat 方向打下了点基础。大一下遭遇了 covid，在家待了一学期，基本是摆烂，好在数学课成绩也混的还行。这期间稍微接触了一点 ML 的东西，学了点皮毛。大二上回到学校，和几个同学报了本系老师的一个 SRT 项目，然而指导的博士生学长画完饼之后完全没有提供什么指导，项目就一直吊在那里（到最后这个半年的 SRT 项目拖了整整一年才结项，让我对SRT产生了极强的厌恶心理）。同时这学期一门专业课吃了超级低分，差点挂科，一时间万念俱灰，觉得无论如何不能在这个专业待下去了，遂萌生转专业的想法。
 
 + **大二下：开始辅修，初步产生转专业想法**
 
-  其实刚入学的时候就有修一个辅修/双学位的想法。一开始是将目标定在了cs minor上。你清的辅修一般来说是从大二上学期开始，我在大二上也确实选了计辅的两门课。谁知道从我们这届开始辅修双学位政策突然改革，双学位取消，辅修变成了辅修学位。新辅修之下一些旧辅修的课不再被认定于培养方案之中（比如计辅），盘算了一下这计辅怎么样也没法修了（而且听了几节邓公的DSA感觉不是那么感兴趣x），于是干脆这学期摆烂了。但还是想修辅修，对着所有的辅修项目来来回回看了半天，想到自己以前的一点点（几乎没有）的数竞背景，再加上朋友也修了统辅，就误打误撞入了统辅的坑。但是由于已经错过了修统辅两门基础课的时机（初等概率论+统计推断，只在秋季学期开），如果想修够学分的话就只能硬着头皮上以这两门课为基础的线性回归和多元统计。由于没有系统上过统计推断，在修这两门的时候还是有些痛苦的（当然体验还是好于本专业屑课），课后额外花了不少时间自学。正好还赶上这学期wljj休假没来上课，多元是mld&tyjj上的，前半学期mld讲的昏昏沉沉，我也学的昏昏沉沉，后半学期学的不太扎实，大作业选题也不太好，导致只有B+（感谢tyjj捞我，本来以为要更低）。而另一边周老师的线性回归则是workload很大，内容非常多，一开始还能跟着做一些推导，到后面又是完全摆烂了，好在周老师给分不错，这课得了A-。
+  其实刚入学的时候就有修一个辅修/双学位的想法。一开始是将目标定在了 cs minor 上。你清的辅修一般来说是从大二上学期开始，我在大二上也确实选了计辅的两门课。谁知道从我们这届开始辅修双学位政策突然改革，双学位取消，辅修变成了辅修学位。新辅修之下一些旧辅修的课不再被认定于培养方案之中（比如计辅），盘算了一下这计辅怎么样也没法修了（而且听了几节邓公的DSA感觉不是那么感兴趣x），于是干脆这学期摆烂了。但还是想修辅修，对着所有的辅修项目来来回回看了半天，想到自己以前的一点点（几乎没有）的数竞背景，再加上朋友也修了统辅，就误打误撞入了统辅的坑。但是由于已经错过了修统辅两门基础课的时机（初等概率论+统计推断，只在秋季学期开），如果想修够学分的话就只能硬着头皮上以这两门课为基础的线性回归和多元统计。由于没有系统上过统计推断，在修这两门的时候还是有些痛苦的（当然体验还是好于本专业屑课），课后额外花了不少时间自学。正好还赶上这学期 wljj 休假没来上课，多元是 mld&tyjj 上的，前半学期 mld 讲的昏昏沉沉，我也学的昏昏沉沉，后半学期学的不太扎实，大作业选题也不太好，导致只有 B+（感谢 tyjj 捞我，本来以为要更低）。而另一边周老师的线性回归则是 workload 很大，内容非常多，一开始还能跟着做一些推导，到后面又是完全摆烂了，好在周老师给分不错，这课得了 A-。
 
-  这学期还发生了一件对我决定转专业有着重要影响的事情。5月份的时候看到了统计中心发的第五届清北统计论坛报名通知，地点在隔壁，于是就抱着好奇的心态报名了，结果真的报名成功了。中心那边的老师也鼓励当时还没什么基础的我去听听。论坛那天晚上正好是多元的期末考试（或许这也是多元期末寄了的原因之一hh），地点在隔壁镜春园82号院。去了现场才发现来的全是两边学校的博士生以及很多的老师，会场旁边摆了一排的poster，当时还不太看得懂（现在应该也看不懂x）。印象最深的大概是耿直老师的talk，介绍了因果推断以及图模型相关的研究，让我第一次了解了这个领域，于是下学期就选了wljj的因果推断导论（当时还不知道耿老师就是wljj的博士老板，更没想到在下学期的课上wljj会请耿老师来做讲座x）。关于那天的印象还有：茶歇很好吃、统计中心的包很好看、隔壁的环境很好x
+  这学期还发生了一件对我决定转专业有着重要影响的事情。5月份的时候看到了统计中心发的第五届清北统计论坛报名通知，地点在隔壁，于是就抱着好奇的心态报名了，结果真的报名成功了。中心那边的老师也鼓励当时还没什么基础的我去听听。论坛那天晚上正好是多元的期末考试（或许这也是多元期末寄了的原因之一hh），地点在隔壁镜春园82号院。去了现场才发现来的全是两边学校的博士生以及很多的老师，会场旁边摆了一排的 poster，当时还不太看得懂（现在应该也看不懂x）。印象最深的大概是耿直老师的talk，介绍了因果推断以及图模型相关的研究，让我第一次了解了这个领域，于是下学期就选了 wljj 的因果推断导论（当时还不知道耿老师就是wljj的博士老板，更没想到在下学期的课上wljj会请耿老师来做讲座x）。关于那天的印象还有：茶歇很好吃、统计中心的包很好看、隔壁的环境很好x
 
   珍藏的合影:
   <img src='/images/photo_stat_colloquim.jpeg'>
 
 + **大三上：进组打工**
   
-  大二的暑假基本全在摆烂，由于pandemic困在家里，随便看了看时间序列的讲义（越看越觉得没意思），时间就这么过去了。开学之后，想着要赶紧摆脱本系烂掉的SRT，找一段统计相关的科研，就打算发邮件联系一下统计中心的老师。在统计中心的官网上看了半天，先是给三位做时间序列的老师发了邮件询问是否有科研机会（当时也不知道为什么对时间序列有点兴趣），最后只有李东老师回复说我可以找他聊聊，于是我就糊里糊涂地去了他的办公室。李东老师人还是很好的，现在看来他当时提的一些问题以及给的建议还是挺有用的。但他非常不建议本科生做他这个方向的科研，留下了一句让我印象深刻的话：“传统时间序列已经死了。”虽然我之后还是选了他开的应用时间序列分析hh。放弃时间序列之后，我开始找其他的方向。又看了一圈之后，联系了张静怡老师。张老师很热情，秒回了我的邮件，让我来她办公室聊聊，之后也就很顺利地进了组。不过第一个学期基本都在读文献旁听组会，也并没有做出什么实质性的东西。
+  大二的暑假基本全在摆烂，由于 pandemic 困在家里，随便看了看时间序列的讲义（越看越觉得没意思），时间就这么过去了。开学之后，想着要赶紧摆脱本系烂掉的 SRT，找一段统计相关的科研，就打算发邮件联系一下统计中心的老师。在统计中心的官网上看了半天，先是给三位做时间序列的老师发了邮件询问是否有科研机会（当时也不知道为什么对时间序列有点兴趣），最后只有 [李东老师](http://www.stat.tsinghua.edu.cn/en/teambuilder/faculty/dongli/) 回复说我可以找他聊聊，于是我就糊里糊涂地去了他的办公室。李东老师人还是很好的，现在看来他当时提的一些问题以及给的建议还是挺有用的。但他非常不建议本科生做他这个方向的科研，留下了一句让我印象深刻的话：“传统时间序列已经死了。”虽然我之后还是选了他开的应用时间序列分析hh。放弃时间序列之后，我开始找其他的方向。又看了一圈之后，联系了 [张静怡老师](http://www.stat.tsinghua.edu.cn/en/teambuilder/faculty/jingyi-zhang/)。张老师很热情，秒回了我的邮件，让我来她办公室聊聊，之后也就很顺利地进了组。不过第一个学期基本都在读文献旁听组会，也并没有做出什么实质性的东西。
 
-  统辅课程方面，这个学期也是相当忙碌。由于没有先修初概统推，这个学期在需要补这两门课的同时还要再上两门选修课（数科导+因果），所以一共选了四门总12学分的统辅课。再加上一堆专业屑课，这学期的学分直接爆炸了x（结果最后初概期中爆炸排在后10%，再吃一个B+，蚌）但这学期也和wljj交流了很多（不管是初概还是因果的内容），经常在课后交流很久，有时候还去office hour. wljj也非常关心同学们的学习情况，最令人惊奇的是我第一次课后去找她交流的时候，她直接就叫出了我的名字，而我之前可能都没有和她说过话。现在回想这学期和wljj密切的交流或许也促成了之后的那封推荐信。
+  统辅课程方面，这个学期也是相当忙碌。由于没有先修初概统推，这个学期在需要补这两门课的同时还要再上两门选修课（数科导+因果），所以一共选了四门总12学分的统辅课。再加上一堆专业屑课，这学期的学分直接爆炸了x（结果最后初概期中爆炸排在后10%，再吃一个B+，蚌）但这学期也和wljj交流了很多（不管是初概还是因果的内容），经常在课后交流很久，有时候还去 office hour 聊一聊. Wljj也非常关心同学们的学习情况，最令人惊奇的是我第一次课后去找她交流的时候，她直接就叫出了我的名字，而我之前可能都没有和她说过话。现在回想这学期和 wljj 密切的交流或许也间接促成了之后的那封推荐信。
 
 + **大三下：解决语言考试+联系暑研**
   
-  摆烂了一个寒假，到了开学之后才惊觉好像该找暑研了（当时其实还没想好保研or出国），焦虑值直接拉满。慌慌张张海投了50+封邮件，回复寥寥。但好在还是有人回复，也非常幸运找到了愿意带暑研的老板。这段时间的焦虑值真的是相当高，一个学校一个学校地看有没有感兴趣的老师再尝试发邮件，同时在一亩三分地等论坛上把能找到的相关的帖子都看了一遍。大概在确认找到暑研之后才稍微缓了过来，也基本确定了要走出国的道路。其实暑研老板有问我要不要来onsite做，但考虑到当时的形势最终还是选择了remote（埋下了啥都没做出来的伏笔）。
+  摆烂了一个寒假，到了开学之后才惊觉好像该找暑研了（当时其实还没想好保研or出国），焦虑值直接拉满。慌慌张张海投了 50+ 封邮件，回复寥寥。但好在还是有人回复，也非常幸运找到了愿意带暑研的老板。这段时间的焦虑值真的是相当高，一个学校一个学校地看有没有感兴趣的老师再尝试发邮件，同时在一亩三分地等论坛上把能找到的相关的帖子都看了一遍。大概在确认找到暑研之后才稍微缓了过来，也基本确定了要走出国的道路。其实暑研老板有问我要不要来 onsite 做，但考虑到当时的形势最终还是选择了 remote（埋下了啥都没做出来的伏笔）。
 
-  语言考试又是另一条线。本来寒假摆烂期间学了学GRE，然后想着开学前连着把T和G一起考了，结果由于pandemic原因又被取消，只得狼狈地回到北京抢考位。最后三月份考了G，四月份考了T，都是在王府学校考点（这个考点还挺好的），都是过线分数飘过，也算是一次就成功分手了。
+  语言考试又是另一条线。本来寒假摆烂期间学了学 GRE，然后想着开学前连着把T和G一起考了，结果由于 pandemic原因又被取消，只得狼狈地回到北京抢考位。最后三月份考了G，四月份考了T，都是在王府学校考点（这个考点还挺好的），都是过线分数飘过，也算是一次就成功分手了。
 
-  关于课程，由于这学期身体伤病和pandemic的原因，退的只剩很少的课，全部摆烂水过。。。这个学期的科研进度也因为伤病暂且搁置，基本就是跑了一些simulation。
+  关于课程，由于这学期身体伤病和 pandemic 的原因，退的只剩很少的课，全部摆烂水过。。。这个学期的科研进度也因为伤病暂且搁置，基本就是跑了一些 simulation。
 
 + **大四上：准备申请**
 
   经历了一个疯狂的暑假回到学校，逐渐接受了自己暑研一事无成的事实，以及对自己暑假的一系列迷惑操作感到后悔，开始准备即将到来的申请季。
 
-  首先是推荐信。九月份给wljj发了邮件询问推荐信，得到了肯定的回复，wljj让我写个草稿给她参考。十月份跟张老师和暑研老板分别确定了推荐信，同时也得知了暑研老板的这封推荐信不是超强推（但还是得要），这两封推荐信都是老师写。而且三位推荐人的推荐信都没有数量限制（即使是知道了我要申30个项目），而且还鼓励我多申一点项目，真的非常感谢老师们！
+  首先是推荐信。九月份给 wljj 发了邮件询问推荐信，得到了肯定的回复，wljj 让我写个草稿给她参考。十月份跟张老师和暑研老板分别确定了推荐信，同时也得知了暑研老板的这封推荐信不是超强推（但还是得要），这两封推荐信都是老师写。而且三位推荐人的推荐信都没有数量限制（即使是知道了我要申30个项目），而且还鼓励我多申一点项目，真的非常感谢老师们！
 
-  剩下的就是确定最后的选校List，完善CV、写SOP、送分，大战各个学校的申请系统。这部分事情其实也相当多。比如在选校方面我纠结了半天也定不下来最终list，感觉每个学校都想去试试，拖延到了快11月的时候才差不多定下来（而这时候发现NUS的ddl是11.15，看起来赶不上了，又临时删掉）。CV本来投暑研的时候做了一版，用的是朋友推荐的[WonderCV](https://www.wondercv.com/)，但是后来觉得还是限制太多，就从[Overleaf](https://www.overleaf.com/latex/templates/tagged/cv/page/1)上找了个模板魔改了一下，这回感觉比之前的要满意一些（可以见我主页hh）。SOP我当时其实并没有给予比较高的权重和重视程度，不知道这对最后的申请结果产生了什么样的影响。虽然说一直在“构思”，但是迟迟没有动笔写。一直拖到了大概11.20左右（我的第一个ddl是11.29），感觉必须要开始写了，这才强迫自己开始挤牙膏。那段时间正好也比较混乱，我也在忙着回家的事情，所以最后的SOP初稿是在11.29当天回家的高铁上写完的（ddl人永不认输x）。之后用deepl，grammarly，chatGPT简单润色了一下语言，也就再没有改过。
+  剩下的就是确定最后的选校 List，完善 CV、写 SOP、送分，大战各个学校的申请系统。这部分事情其实也相当多。比如在选校方面我纠结了半天也定不下来最终list，感觉每个学校都想去试试，拖延到了快11月的时候才差不多定下来（而这时候发现NUS的ddl是11.15，看起来赶不上了，又临时删掉）。CV 本来投暑研的时候做了一版，用的是朋友推荐的 [WonderCV](https://www.wondercv.com/)，但是后来觉得还是限制太多，就从 [Overleaf](https://www.overleaf.com/latex/templates/tagged/cv/page/1) 上找了个模板魔改了一下，这回感觉比之前的要满意一些（可以见我主页hh）。SOP我当时其实并没有给予比较高的权重和重视程度，不知道这对最后的申请结果产生了什么样的影响。虽然说一直在“构思”，但是迟迟没有动笔写。一直拖到了大概 11.20 左右（我的第一个ddl是11.29），感觉必须要开始写了，这才强迫自己开始挤牙膏。那段时间正好也比较混乱，我也在忙着回家的事情，所以最后的 SOP 初稿是在 11.29 当天回家的高铁上写完的（ddl人永不认输x）。之后用 deepl，grammarly，chatGPT简单润色了一下语言，也就再没有改过。
 
   整个12月基本都是在填系统当中度过。这也是比较繁琐的，但个人觉得还是没有麻烦到需要请一个中介来填...需要注意的地方有：
 
-  + 要注意每个项目的**精确ddl**（当然最好别当ddl战士！）。很多项目的ddl都是**美东时间当天的23:59**，由于时差，在冬令时下换算过来（时差13h）就是北京时间**第二天的12:59**。有些学校会在申请系统里加上项目的ddl倒计时（比如Berkeley）。当并不是所有的项目都是用美东时间作为ddl，也不是所有项目都是晚上12点的ddl。为了保险起见，最好提前一天就提交申请/查清楚项目的ddl精确时间（推荐前者）。
-  + 记得送分。申请时语言成绩是必要的，而这个语言成绩需要你自己送给学校。每个学校会给一个code，托福的话需要在报名的网站上送，我申请的时候是146¥一次（这个是可以用支付宝之类的支付的），同一个学校如果申请多个项目一般只需要送一次。GRE则是需要到[GRE专门的网站](https://www.ets.org/login.html)（和国内报名GRE的网站不一样，和报名GRE sub的网站一样）上送分，价格是30$一次，需要用信用卡或者借记卡支付。送分的时间还是建议在ddl前一周以上，因为这当中有一个ets发送然后目标学校接收并verify的过程（特别申请季期间请求数量增加，处理的会更慢）。
-  + 推荐信提交。不同学校的申请系统不一样，而推荐信的提交一般有两种情况：一种是在提交申请之前就可以给推荐人发request，另一种则是提交申请之后才能给申请人发request的。如果是后一种情况的话，可能没有办法在同一时间给一位推荐人发很多学校的request（除非你其他材料已经准备好了），这是需要注意的。
-  + 最后还是提醒：交申请不要踩着ddl！！！
+  + 要注意每个项目的**精确ddl**（当然最好别当ddl战士！）。很多项目的ddl都是**美东时间当天的23:59**，由于时差，在冬令时下换算过来（时差13h）就是北京时间**第二天的12:59**。有些学校会在申请系统里加上项目的ddl倒计时（比如 Berkeley）。当并不是所有的项目都是用美东时间作为 ddl，也不是所有项目都是晚上12点的 ddl。为了保险起见，最好提前一天就提交申请/查清楚项目的ddl精确时间（推荐前者）。
+  + 记得送分。申请时语言成绩是必要的，而这个语言成绩需要你自己送给学校。每个学校会给一个code，托福的话需要在报名的网站上送，我申请的时候是146¥一次（这个是可以用支付宝之类的支付的），同一个学校如果申请多个项目一般只需要送一次。GRE则是需要到 [GRE专门的网站](https://www.ets.org/login.html)（和国内报名GRE的网站不一样，和报名GRE sub的网站一样）上送分，价格是30$一次，需要用信用卡或者借记卡支付。送分的时间还是建议在ddl前一周以上，因为这当中有一个ets发送然后目标学校接收并verify的过程（特别申请季期间请求数量增加，处理的会更慢）。
+  + 推荐信提交。不同学校的申请系统不一样，而推荐信的提交一般有两种情况：一种是在提交申请之前就可以给推荐人发request，另一种则是提交申请之后才能给申请人发 request 的。如果是后一种情况的话，可能没有办法在同一时间给一位推荐人发很多学校的 request（除非你其他材料已经准备好了），这是需要注意的。
+  + 最后还是提醒：交申请不要踩着 ddl！！！
 
 + **大四下：申请进行中以及后续工作**
   
-  一月初交完了所有的申请，稍稍松了一口气，但随即又紧张了起来，因为一些项目已经陆续有消息了。下面记录了我从提交申请之后的timeline（搬运自[我在知乎的回答](https://www.zhihu.com/question/360515552/answer/2426625989)）：
+  一月初交完了所有的申请，稍稍松了一口气，但随即又紧张了起来，因为一些项目已经陆续有消息了。下面记录了我从提交申请之后的timeline（搬运自 [我在知乎的回答](https://www.zhihu.com/question/360515552/answer/2426625989)）：
   + 2022.12.19：
     Dartmouth qbs phd rej. 很早的拒信，这个项目的bar也搞不清楚，看不要申请费顺手申的
 
@@ -108,23 +108,24 @@ tags:
     大年初二收到 UPenn poi 的 interview invitation...紧张到爆炸
 
   + 2023.1.24：
-    **Emory biostat msph ad.** 虽然是保底，但好歹是申请季第一个offer.
-    amcs的poi funding不够没有办法招...痛失彩票
+    **Emory biostat msph ad.** 虽然是保底，但好歹是申请季第一个 offer.
 
-    **P.S.** 这两天应该是我整个申请季压力最大的两天。大年初二早晨我还在合肥旅游，早上七点醒来之后看了一眼手机却发现收到了UPenn的Yong Chen老师发来的面试邀请，且时间就是在当天晚上。我立刻睡不着了，而且取消了当天的所有行程，开始准备晚上的面试，毕竟这可是dream program的项目，假如能够被录取那么申请季就真·提前结束了。大概花了半天时间做完ppt，然后花了一两个小时演练了一下，就到了晚上面试的时间。很奇怪，到了面试的时候反而没有那么紧张了，陈老师也很友善，30分钟我大概自己介绍了15分钟，陈老师提问&介绍了15分钟，然后告诉我第二天早上还会有一次chat。当时我还感觉是不是挺有希望，毕竟以前似乎看过有同学二面之后就直接被录取了的。我也联系到了陈老师组里在读的phd学姐，确认了一些信息。然而之后事情有变，prof chen的第二次chat只是直接中文告诉我他的funding不够招我了，我能够理解这是一种更委婉的说法，应该是他后续又面试了更优秀的申请者。不过老师人也很好，给我的后续申请提了一些建议，也告诉我之后有任何问题可以直接联系他。但总的来说dream program被拒还是很失落的。
+    AMCS 的 poi funding 不够没有办法招...痛失彩票
+
+    **P.S.** 这两天应该是我整个申请季压力最大的两天。大年初二早晨我还在合肥旅游，早上七点醒来之后看了一眼手机却发现收到了 UPenn 的 Yong Chen 老师发来的面试邀请，且时间就是在当天晚上。我立刻睡不着了，而且取消了当天的所有行程，开始准备晚上的面试，毕竟这可是 dream program 发来的面试，假如能够被录取那么申请季就真·提前结束了。大概花了半天时间做完ppt，然后花了一两个小时演练了一下，就到了晚上面试的时间。很奇怪，到了面试的时候反而没有那么紧张了，陈老师也很友善，30分钟我大概自己介绍了15分钟，陈老师提问&介绍了15分钟，然后告诉我第二天早上还会有一次 chat。当时我还感觉是不是挺有希望，毕竟以前似乎看过有同学二面之后就直接被录取了的。我也联系到了陈老师组里在读的 phd 学姐，确认了一些信息。然而之后事情有变，prof chen 的第二次 chat 只是直接中文告诉我他的 funding 不够招我了，我能够理解这是一种更委婉的说法，应该是他后续又面试了更优秀的申请者。不过老师人也很好，给我的后续申请提了一些建议，也告诉我之后有任何问题可以直接联系他。但总的来说 dream program 被拒还是很失落的。
 
   + 2023.2.1：
-    **ISU stat phd offer.** 有书读了。申请季的第一个PhD Offer，让我从前几天的失落当中缓了过来。
+    **ISU stat phd offer.** 有书读了。申请季的第一个 PhD Offer，让我从前几天的失落当中缓了过来。
 
   + 2023.2.4：
     UMN biostat phd waitlisted. 我急了我急了我急了）
 
   + 2023.2.7：
   **UMich biostat ms ad.**
-    PSU stat committee reach out（当时还只是以为要来面试之类的，没想到之后直接发了offer...）.
+    PSU stat committee reach out（当时还只是以为要来面试之类的，没想到之后直接发了 offer...）.
 
   + 2023.2.11：
-    **PSU stat phd offer！** 睡前的好消息！2.7先是收到committee邮件询问是否对项目还有兴趣，回复确认后今天收到了正式offer。**P.S.** 拿到PSU的offer之后，我从心理上认为申请季已经圆满了。
+    **PSU stat phd offer！** 睡前的好消息！2.7先是收到committee邮件询问是否对项目还有兴趣，回复确认后今天收到了正式offer。**P.S.** 拿到 PSU 的offer之后，我从心理上认为申请季已经圆满了，后面不管是。
 
   + 2023.2.17：
     Brown biostat rej, considered for ScM program.
@@ -133,10 +134,10 @@ tags:
 
   + 2023.2.18：
     UW biostat ms rej.
-    面完UFL，老师居然和暑研老板认识，互相养鱼大概是发了半个informal offer?
+    面完 UFL，老师居然和暑研老板认识，互相养鱼大概是发了半个 informal offer?
 
   + 2023.2.21：
-    **Columbia biostat ms ad (theory and methods track).** 和Emory一起临时加申的项目，不是priority round. 哥大的综排专排都很高，但是这个ms项目的bar似乎不高，应该不会去（不过status查结果的时候居然还有特效，乐）
+    **Columbia biostat ms ad (theory and methods track).** 和 Emory 一起临时加申的项目，不是priority round. 哥大的综排专排都很高，但是这个ms项目的bar似乎不高，应该不会去（不过 status 查结果的时候居然还有特效，乐）
 
   + 2023.2.23：
     **UW stat ms ad**. 中彩票了??（这个算彩票吗x） 很好的跳板项目，让我稍微纠结一下x
@@ -149,7 +150,7 @@ tags:
     Yale biostat ms rej. 好像意料之外又好像意料之中，蚌
 
   + 2023.3.4：
-    随手问了俩学校（Purdue和UGA）的director，都说在waitlist上，看来剩下的学校也大差不差了...
+    随手问了俩学校（Purdue 和 UGA）的 director，都说在 waitlist 上，看来剩下的学校也大差不差了...
 
   + 2023.3.6：
     NCSU stat phd rej. 没啥念想了。
@@ -160,20 +161,20 @@ tags:
     UPenn amcs phd rej. 说不遗憾是不可能的，但是自己确实实力不足，抽不到彩票也正常。
 
   + 2023.3.11：
-    Brown biostat ScM waitlisted. ????? 申phd被拒转为考虑master项目还被放进waitlist，双重羞辱属于是...直接decline了）
+    Brown biostat ScM waitlisted. ????? 申phd被拒转为考虑 master 项目还被放进 waitlist ，双重羞辱属于是...直接 decline 了）
 
   + 2023.3.13：
     Harvard biostat ms rej. 意料之中，结果快出完了，生统项目接近全聚德.
 
   + 2023.3.22：
-    **UMN stat phd offer!** 从waitlist上下来了，真的非常感谢同校同学在decline的时候refer了我，申请季结束了。
+    **UMN stat phd offer!** 从 waitlist 上下来了，真的非常感谢同校同学在 decline 的时候 refer 了我，申请季结束了。
     UNC biostat phd rej. 意料之中的结果，我和北卡果然没有缘分hh
 
   + 2023.3.25：
-    收到UFL可以发正式offer的邀请，不过已经decline了
+    收到 UFL 可以发正式 offer 的邀请，不过已经 decline 了
 
   + 2023.3.30：
-    decline了Columbia，ISU和OSU. 希望waitlist上的同学好运！
+    decline 了 Columbia，ISU 和 OSU. 希望 waitlist 上的同学好运！
 
   + 2023.4.3：
     Ethz stat MSc rej. 意料之中，周日发拒信有点东西）
@@ -186,38 +187,51 @@ tags:
 
 ## Why Statistics？
 
-每个人或许都有着自己独特的转统的理由，这一点将作为你的motivation贯穿整个申请季，并体现在你的SOP中。对我个人来说，可能中学期间的竞赛经历和大学前两年糟糕的专业体验是我转专业的契机，而后续遇到的老师、同学们以及在课程和科研上的体验则让我坚定了自己的选择。不过不管怎么说，什么样的理由都值得尊重，只要自己想好了，就可以大胆地去实践。
+每个人或许都有着自己独特的转统的理由，这一点将作为你的 motivation 贯穿整个申请季，并体现在你的 SOP 中。对我个人来说，可能中学期间的竞赛经历和大学前两年糟糕的专业体验是我转专业的契机，而后续遇到的老师、同学们以及在课程和科研上的体验则让我坚定了自己的选择。不过不管怎么说，什么样的理由都值得尊重，只要自己想好了，就可以大胆地去实践。
 
 ## 语言  
 
-语言成绩可以说是申请的一项硬性关卡。但对于PhD申请来说，一个“过线”的语言成绩（T100，G320）一般来讲已经足够了。怀着这样的想法，我在22年3月+4月连着考出了G323和T102之后就没有再管过语言成绩。对于语言考试的准备，我可能没有太多的发言权，但我认为考前集中时间准备效率是最高的。比如GRE在考前两三周集中高强度刷题&背单词，托福考前一周高强度练口语写作。从应试的角度这样的提升还是明显的。平时的话由于我也会有意识地去接触一些英文的材料（主要是书影音），所以可能不经意间也给自己创造了一些学习英语的环境。
+语言成绩可以说是申请的一项硬性关卡。但对于PhD申请来说，一个“过线”的语言成绩（T100，G320）一般来讲已经足够了。怀着这样的想法，我在22年3月+4月连着考出了 G323 和 T102 之后就没有再管过语言成绩。对于语言考试的准备，我可能没有太多的发言权，但我认为考前集中时间准备效率是最高的。比如 GRE 在考前两三周集中高强度刷题&背单词，托福考前一周高强度练口语写作。从应试的角度这样的提升还是明显的。平时的话由于我也会有意识地去接触一些英文的材料（主要是书影音），所以可能不经意间也给自己创造了一些学习英语的环境。
 
-这里再说下GRE。现在很多学校对GRE都给出了optional甚至not required的选项，所以没有GRE成绩也是完全有有学上的。从我自己申请的项目来看，30个项目里面交了13次GRE分数，其中必须要交的大概在10个左右。所以说是否考GRE还是取决于想去的学校是否需要，这个就得自己去项目官网上看了（毕竟每年可能都有变化）。
+这里再说下 GRE。现在很多学校对 GRE 都给出了 optional 甚至 not required 的选项，所以没有 GRE 成绩也是完全有有学上的。从我自己申请的项目来看，30 个项目里面交了 13 次 GRE 分数，其中必须要交的大概在 10 个左右。所以说是否考 GRE 还是取决于想去的学校是否需要，这个就得自己去项目官网上看了（毕竟每年可能都有变化）。
 
-关于GRE sub：绝大多数（可以说95%以上）的统计PhD项目是不需要GRE sub math的成绩的，只有少量顶尖项目需要（我没有遇到）。但22年9月的时候暑研老板突然告诉我可以试一下Penn的一个Applied Math项目（也就是AMCS），而这个项目是需要sub成绩的。为此我还花了大概一个月的时间刷了点题，补充了一些知识点，然而最后还是由于pandemic的原因全国的sub考试都取消了（大陆境内一年只有一次），于是没考成，血亏。更离谱的是后来发邮件问了AMCS那边的老师得到回复说没有sub成绩也可以申，难绷）
+关于GRE sub：绝大多数（可以说 95% 以上）的统计PhD项目是不需要 GRE sub math 的成绩的，只有少量顶尖项目需要（我没有遇到）。但 22 年 9 月的时候暑研老板突然告诉我可以试一下 Penn 的一个 Applied Math 项目（也就是 AMCS），而这个项目是需要 sub 成绩的。为此我还花了大概一个月的时间刷了点题，补充了一些知识点，然而最后还是由于 pandemic 的原因全国的 sub 考试都取消了（大陆境内一年只有一次），于是没考成，血亏。更离谱的是后来发邮件问了 AMCS 那边的老师得到回复说没有 sub 成绩也可以申，难绷）
 
 
 ## 暑研
-暑研可以说是PhD申请当中非常重要的一环（尤其是对于转专业选手）。毕竟在现在的环境下，一封美国老师的推荐信对于申请美国学校还是有很大的帮助的。由于我找暑研的时候出国还比较困难，所以默认是remote intern。现在应该是可以线下去了，情况会不一样一些，整个timeline应该也要提前。我大概把整个过程分为三个部分（当然鉴于我后两项做的比较烂，主要就讲讲怎么找暑研）。
+暑研可以说是 PhD 申请当中非常重要的一环（尤其是对于转专业选手）。毕竟在现在的环境下，一封美国老师的推荐信对于申请美国学校还是有很大的帮助的。由于我找暑研的时候出国还比较困难，所以默认是 remote intern。现在应该是可以线下去了，情况会不一样一些，整个 timeline 应该也要提前。我大概把整个过程分为三个部分（当然鉴于我后两项做的比较烂，主要就讲讲怎么找暑研）。
 
-+ 找暑研：我是三月份才意识到需要找暑研的，这个时间已经比较晚了，最好从一月甚至上一年年底就开始联系。寻找暑研的途径可以分为两类：官方项目和自己联系。
++ **找暑研**：我是三月份才意识到需要找暑研的，这个时间已经比较晚了，最好从一月甚至上一年年底就开始联系。寻找暑研的途径可以分为两类：官方项目和自己联系。
   + 官方项目数量不多，有些是和学校有合作的，还有一些需要自己申请。一些比较有名的官方项目：Stanford UGVR, UCLA CSST, Caltech SURF, Canada Mitacs, UCI UCInspire, Notre dame iSURE等等。你清应该还和UC Davis以及NC State有合作的暑研项目。官方项目的好处大概有：开始比较早，申请比较简单（只需要按照官方的程序走就行），一旦录取不会被鸽。但也有比较多的限制：项目时间固定，项目方向有限制（不一定有想去的组），要参加官方安排的一些活动，（一般）需要自费（虽然可以找学校报销）。
-  + 暑研走官方的同学还是少数，大部分同学还是通过自己联系的方式找的暑研（包括我自己）。我自己找暑研的方法很笨：先找一份比较靠谱的统计专业排名（比如[usnews](https://www.usnews.com/best-graduate-schools/top-science-schools/statistics-rankings)），然后从上往下一个个找里面的faculty，然后看有没有感兴趣的老师。（P.S.：当时找暑研的时候还没有想做biostat，所以只看了统计系的老师，后来找到了做生统的老板纯属意外）然后把每个学校感兴趣的老师整理进一个表格，再写套磁信准备发。套磁信个人觉得不宜太长，简单较少一下自己、自己的研究兴趣、自己对目标老师的什么方向感兴趣，最后再附上CV或者personal website就可以了。我自己反思暑研套磁回复率较低的原因可能有一点就是套磁信写的太长了（说了一些废话，写得像SOP，老师可能不高兴看）。在发邮件时，尽量考虑到时差，在对方工作日早上八点之前发过去会比较好（这样老师在处理邮件的时候你的邮件会在比较前面，间接增加回复率），然后一天发几封就好（我当时大概是一天发4-5封）。注意不要短时间给同一个学校的不同老师发邮件，因为老师之间可能会有交流，要是被发现海投可能会给老师留下坏印象x 
-  投完之后老师的回复可能有如下几种：（1）石沉大海. 这有可能是收到的最多的结果，毕竟要理解老师们都很忙；（2）回复不招暑研。这种情况虽然很遗憾，但还是礼貌回复老师就好。（3）回复愿意进一步交流甚至愿意约chat，这种情况就说明老师有带你的意愿了，一般老师会用zoom或者skype进行一个简单的聊天。不用太紧张，准备一个slides介绍一下自己以及过去的研究经历就好。（4）直接发offer（？？）这种情况我没有遇到过，但是一个经验是：要小心过于热情的老师。如果是这种情况的话反而需要仔细考虑一下。我最后粗略估计发了50几封邮件，80%是情况（1），10%是情况（2），剩下大概有四五位老师回复有兴趣，我和其中两位老师约了chat，其中第一位老师的方向不太match，遂作罢；第二位老师就是后来的暑研老板。
-  如何提高套磁成功率：（1）多找AP（Assistant Professor）。一般来说AP更倾向于带intern，他们主要有以下特点：手上项目多、缺学生；有发文章tenure压力，会更push，也更容易出成果；更倾向于亲自指导学生，而他们身上有很多很好的习惯，可以学到很多。但相对的，比起更senior的老师，他们在学术圈的知名度可能没有那么高，connection会弱一些（以及推荐信的效力），这是需要取舍的。（2）让校内老板推荐。这是一个非常有效率且成功率很高的方法（比如统计中心就有老师跟Harvard有合作），但由于我老板跟国外connection相对较弱，我没有让她推荐。（3）找清华校友。虽然你清在国外统计系的校友比起隔壁甚至科大都少很多，但还是有一些的（*挖坑，之后有空更个合集吧x*）。他们对于来自清华的套磁信应该还是至少会多看一眼的。
-+ 找到暑研之后：主要是要和老师商量好什么时候开始。统计方向其实没有什么必须要线下的，可以线上提前开始。如果是全程remote intern而且老板比较放养的话，记得多push自己，毕竟remote比起onsite还是效率差一些的。另外，谨慎考虑同时打两份工，除非你认为你的精力真的**足够充沛**（亲身经历，血的教训）。
-+ 暑研结束后：主要是要跟老师保持联系，记得在申请季前提前跟老师说好推荐信的事情。
+  + 暑研走官方的同学还是少数，大部分同学还是通过自己联系的方式找的暑研（包括我自己）。我自己找暑研的方法很笨：先找一份比较靠谱的统计专业排名（比如[usnews](https://www.usnews.com/best-graduate-schools/top-science-schools/statistics-rankings)），然后从上往下一个个找里面的 faculty，然后看有没有感兴趣的老师。（P.S. 当时找暑研的时候还没有想做 biostat，所以只看了统计系的老师，后来找到了做生统的老板纯属意外）然后把每个学校感兴趣的老师整理进一个表格，再写套磁信准备发。套磁信个人觉得不宜太长，简单较少一下自己、自己的研究兴趣、自己对目标老师的什么方向感兴趣，最后再附上 CV 或者 personal website 就可以了。我自己反思暑研套磁回复率较低的原因可能有一点就是套磁信写的太长了（说了一些废话，写得像 SOP，老师可能不高兴看）。在发邮件时，尽量考虑到时差，在对方工作日早上八点之前发过去会比较好（这样老师在处理邮件的时候你的邮件会在比较前面，间接增加回复率），然后一天发几封就好（我当时大概是一天发4-5封）。注意不要短时间给同一个学校的不同老师发邮件，因为老师之间可能会有交流，要是被发现海投可能会给老师留下坏印象x 
+  **投完之后老师的回复可能有如下几种：**
+    - (1) 石沉大海. 这有可能是收到的最多的结果，毕竟要理解老师们都很忙；
+    - (2) 回复不招暑研。这种情况虽然很遗憾，但还是礼貌回复老师就好。
+    - (3) 回复愿意进一步交流甚至愿意约 chat，这种情况就说明老师有带你的意愿了，一般老师会用 zoom 或者 skype 进行一个简单的聊天。不用太紧张，准备一个 slides 介绍一下自己以及过去的研究经历就好。
+    - (4) 直接发 offer（？？）这种情况我没有遇到过，但是一个经验是：**要小心过于热情的老师。** 如果是这种情况的话反而建议仔细调查考虑一下。
+     
+    我最后粗略估计发了50几封邮件，80%是情况 (1)，10%是情况 (2)，剩下大概有四五位老师回复有兴趣，我和其中两位老师约了 chat，其中第一位老师的方向不太 match，遂作罢；第二位老师就是后来的暑研老板。
+
+    **如何提高套磁成功率：**
+
+    - (1) 多找AP（Assistant Professor）。一般来说AP更倾向于带intern，他们主要有以下特点：手上项目多、缺学生；有发文章tenure压力，会更push，也更容易出成果；更倾向于亲自指导学生，而他们身上有很多很好的习惯，可以学到很多。但相对的，比起更senior的老师，他们在学术圈的知名度可能没有那么高，connection会弱一些（以及推荐信的效力），这是需要取舍的。
+    - (2) 让校内老板推荐。这是一个非常有效率且成功率很高的方法（比如统计中心就有老师跟Harvard有合作），但由于我老板跟国外connection相对较弱，我没有让她推荐。
+    - (3) 找清华校友。虽然你清在国外统计系的校友比起隔壁甚至科大都少很多，但还是有一些的（*挖坑，之后有空更个合集吧x*）。他们对于来自清华的套磁信应该还是至少会多看一眼的。
+  
++ **找到暑研之后**：主要是要和老师商量好什么时候开始。统计方向其实没有什么必须要线下的，可以线上提前开始。如果是全程remote intern而且老板比较放养的话，记得多push自己，毕竟remote比起onsite还是效率差一些的。另外，谨慎考虑同时打两份工，除非你认为你的精力真的**足够充沛**（亲身经历，血的教训）。
+  
++ **暑研结束后**：主要是要跟老师保持联系，记得在申请季前提前跟老师说好推荐信的事情。
 
 关于暑研跟小学期的冲突：可能很多工科专业的小学期都有生产实习以及专业实践（比如我所在的某系，大三暑假总共11周的夏季学期有8周被课程占据）。这种情况可以申请用暑研替代生产实习（我当时替代了5周的生产实习）。但这个也要看各个院系自己的政策，如果实在替代不了的话就线上吧。
 
 ## 选校
 
-选校也是整个申请季非常重要的一环，我由于选择困难花了很久才确定最终list。其实选校的第一轮从找暑研的时候就可以开始了。这一轮主要看看各个学校都有什么老师都做啥，整个系的大小之类的。同时可以在各个论坛上看看几年来申请的data point，这样可以对各个项目的申请难度有个大概的认识。
+选校也是整个申请季非常重要的一环，我由于选择困难花了很久才确定最终 list。其实选校的第一轮从找暑研的时候就可以开始了。这一轮主要看看各个学校都有什么老师都做啥，整个系的大小之类的。同时可以在各个论坛上看看几年来申请的data point，这样可以对各个项目的申请难度有个大概的认识。
 
-在正式选校之前，有一个最重要的问题是一定要想清楚的：**是申请授课型硕士、研究型硕士还是博士？** 这个问题的答案直接决定了选校的档次。一般来说申请难度是博士>研究型硕士>授课型硕士，所以除了top申请者，申请phd的时候都要往下调1-2个tier。
+在正式选校之前，有一个最重要的问题是一定要想清楚的：**是申请授课型硕士、研究型硕士还是博士？** 这个问题的答案直接决定了选校的档次。一般来说申请难度是博士>研究型硕士>授课型硕士，所以除了 top 申请者，申请 phd 的时候都要往下调 1-2 个 tier。
 
-以下简单介绍（锐评）一下我选择申请这些项目的原因（附上项目官网链接以及usnews 2022年统计和生统专排）：
-项目的申请难度基本可以按照usnews的排名从高到低排，但不完全是，还要考虑学校本身综排（是否藤校等）、项目招生人数（一般来说招的越多）、是否对中国学生友好等。
+以下简单介绍（锐评）一下我选择申请这些项目的原因（附上项目官网链接以及 usnews 2022 年 [统计](https://www.usnews.com/best-graduate-schools/top-science-schools/statistics-rankings) 和 [生统](https://www.usnews.com/best-graduate-schools/top-science-schools/biostatistics-rankings) 专排）：
+项目的申请难度基本可以按照 usnews 的排名从高到低排，但不完全是，还要考虑学校本身综排（是否藤校等）、项目招生人数（一般来说招的越多）、是否对中国学生友好等。
 
 + **Statistics**
 
@@ -225,7 +239,7 @@ tags:
   + **[University of Washington, Seattle](https://stat.uw.edu/academics/graduate/programs/fulltimemasters) (7)**
   + **[Eth Zurich](https://math.ethz.ch/sfs/education/msc-in-statistics.html)**
 
-    统计master 我只申了两个项目，可以放在一起说。Ethz的这个项目是我唯一申的美国之外的项目，可能还是对瑞士有着一点执念吧hh，不过后来仔细想来一下即使真的去读了之后可能还是得往美国这边申。而且Eth似乎很喜欢高GPA的学生，所以三维高的朋友可以大胆试试，我犹豫三维非常一般最后被拒也是正常。而UW的stat ms项目则是三大统计跳板硕士之一，其余两个是UChicago stat ms和Duke stat mss。UChi我是因为安全问题没申，而duke则没想起来为什么没申（可能是当时主要精力放在申biostat上，以及对贝叶斯没有特别浓厚的兴趣）。申请季认识了UW的学姐申到了本校的PhD，也打听到她们这届大概有一小半同学申请，剩下同学找工，申请的同学variance较大，但普遍都有还行的结果，所以这是个不错的跳板项目。
+    统计 master 我只申了两个项目，可以放在一起说。Ethz 的这个项目是我唯一申的美国之外的项目，可能还是对瑞士有着一点执念吧hh，不过后来仔细想来一下即使真的去读了之后可能还是得往美国这边申。而且 Ethz 似乎很喜欢高 GPA 的学生，所以三维高的朋友可以大胆试试，我由于三维非常一般最后被拒也是正常。而 UW 的 stat ms 项目则是三大统计跳板硕士之一，其余两个是 UChicago stat ms 和 Duke stat mss。UChi 我是因为安全问题没申，而 Duke 则没想起来为什么没申（可能是当时主要精力放在申 biostat 上，以及对贝叶斯没有特别浓厚的兴趣）。申请季认识了 UW 的学姐申到了本校的 PhD，也打听到她们这届大概有一小半同学申请，剩下同学找工，申请的同学结果 variance 较大，但普遍都有还行的结果，所以这是个不错的跳板项目。
 
   **Ph.D.**
 
@@ -233,43 +247,43 @@ tags:
 
   + **[University of Pennsylvania](https://statistics.wharton.upenn.edu/programs/phd/prospective-students/) (7)**
 
-    UPenn的统计项目在沃顿商学院底下，只有phd项目，每年招的人不多，难度很大。但毕竟暑研老板在那边，还是买个彩票试一试（逝一逝x）。
+    UPenn 的统计项目在沃顿商学院底下，只有 phd 项目，每年招的人不多，难度很大。但毕竟暑研老板在那边，还是买个彩票试一试（逝一逝x）。
 
   + **[University of Minnesota, Twin Cities](https://cla.umn.edu/statistics/graduate/degrees/phd-statistics) (13)**
 
-    出于一些个人原因对明大以及明州印象很好，所以这次也申了他们的两个项目。明大的统计系规模不大，但是学术声誉很好，是非常喜欢的项目。他们每年大概招10个左右的phd。
+    出于一些个人原因对明大以及明州印象很好，所以这次也申了他们的两个项目。明大的统计系规模不大，但是学术声誉很好，是非常喜欢的项目。他们每年大概招10个左右的 phd。
 
   + **[North Carolina State University](https://statistics.sciences.ncsu.edu/graduate/phd-programs/) (11)**
 
-    NCSU的统计系专排很高，而且系非常大（可能是全美第一/第二大？），每年招的phd数量比较多，坐落在北卡的首府罗利(Raleigh)，可以说个方面都很好了，也是我当时很想去的学校（可惜被拒了hh）。
+    NCSU 的统计系专排很高，而且系非常大（可能是全美第一/第二大？），每年招的 phd 数量比较多，坐落在北卡的首府罗利 (Raleigh)，可以说个方面都很好了，也是我当时很想去的学校（可惜被拒了hh）。
 
   + **[University of California, Los Angelos](http://statistics.ucla.edu/graduate/applying-to-the-graduate-program/) (19)**
 
-    LA的统计系专排在20左右，但实际申请难度要大于同排名的其他学校，可能是因为学校名气以及招生人数不多。整个系非常的偏cs，有一个很大的cognition lab，还有一些做compbio的lab。今年预计发20个offer最后入学5-6个同学。另外听说这个项目比较喜欢给暑研同学发return offer，如果在这边有感兴趣的老师的话可以考虑暑研套一套。
+    LA 的统计系专排在 20 左右，但实际申请难度要大于同排名的其他学校，可能是因为学校名气以及招生人数不多。整个系非常的偏 cs，有一个很大的 cognition lab，还有一些做 compbio 的 lab。今年预计发 20 个 offer 最后入学 5-6 个同学。另外听说这个项目比较喜欢给暑研同学发 return offer（隔壁有同学拿到了），如果在这边有感兴趣的老师的话可以考虑暑研套一套。
 
   + **[Purdue University](https://www.stat.purdue.edu/academic_programs/graduate/gradPhd.html) (22)**
 
-    Purdue的统计系规模也很大，老师很多，虽然综排不算高，但由于工科等专业的强势在国内意外的有些名气？也是转专业申请的同学可以考虑的选择。
+    Purdue 的统计系规模也很大，老师很多，虽然综排不算高，但由于工科等专业的强势在国内意外的有些名气？也是转专业申请的同学可以考虑的选择。
 
   + **[Iowa State University](https://www.stat.iastate.edu/prospective-graduate-students) (19)**
 
-    ISU是老牌统计强校，规模非常大，只是近年来似乎有所下滑。在专排前20的学校里bar应该算最低的了，不过综排低加上位置不好（村+冷）也确实是硬伤。但总体来看还是不错的选择。
+    ISU 是老牌统计强校，规模非常大，只是近年来似乎有所下滑。在专排前 20 的学校里 bar 应该算最低的了，不过综排低加上位置不好（村+冷）也确实是硬伤。但总体来看还是不错的选择。
 
   + **[Ohio State University](https://stat.osu.edu/graduates/prospective-students/admission) (24)**
 
-    OSU也是专排20-30之间不错的项目，坐落在俄亥俄州的Columbus，是很大的公立学校，生活之类的应该很方便。这个项目的特点在于统计和生统项目的联系很紧密，两边可以互相找老板，比较自由。顺带一提，OSU的申请系统非常特别（无褒义x）
+    OSU 也是专排 20-30 之间不错的项目，坐落在俄亥俄州的 Columbus，是很大的公立学校，不村，生活之类的应该很方便。这个项目的特点在于统计和生统项目的联系很紧密，两边可以互相找老板，比较自由。顺带一提，OSU 的申请系统非常特别（无褒义x）
 
-  + **[Penn State University](https://science.psu.edu/stat/graduate-programs/phd) (19)**
+  + **[Pennsylvania State University](https://science.psu.edu/stat/graduate-programs/phd) (19)**
 
-    PSU的High dimensional statistics非常强，有Runze Li这样的大佬坐镇，同时系里面做个方向的老师也都有。University Park校区位于宾州的正中心，比较僻静，适合做学术。而PSU本身又由于是公立大校，显得又不会那么村，开车去费城或者纽约大概3-4h。这个项目招的学生数量也算比较多的，据说22Fall入学了18个同学，今年给你清发了两个offer，也算是友好校了。
+    PSU 的 High dimensional statistics 非常强，有 Runze Li 这样的大佬坐镇，同时系里面做个方向的老师也都有。University Park 校区位于宾州的正中心，比较僻静，适合做学术。而 PSU 本身又由于是公立大校，显得又不会那么村，开车去费城、纽约或者DC大概都是 3-4h。这个项目招的学生数量也算比较多的，据说 22Fall 入学了 18 个 phd 同学，今年给你清发了两个 offer，也算是友好校了。我挺喜欢他们项目，被录取真的挺开心的。
 
   + **[University of Georgia](https://www.stat.uga.edu/prospective-graduate-students-0) (35)**
 
-    首先说明这是UGA不是GaTech，位于Athen而不是Atlanta（开车大概1h）。是本校老板的母校，本来想着靠connection可以保个底之类的，结果被扔进了waitlist，绷）
+    首先说明这是 UGA 不是 GaTech，位于 Athen 而不是 Atlanta（开车大概1h）。是张老师的母校，本来想着靠 connection 可以保个底之类的，结果被扔进了 waitlist，绷）
 
   + **[University of Florida](https://stat.ufl.edu/academics/graduate/applying-to-the-graduate-program/) (26)**
 
-    是暑研老板推荐之后加上的学校（他在那边读过ms）。UF统计系也是比较老牌了，有一些老师在做MCMC，近年也招了一些很强的做Causal Inference的AP。佛州的物价低天气好，还是很宜居的。这个项目招的人不多，据说23Fall大概准备招5个phd。
+    是暑研老板推荐之后加上的学校（他在那边读过 ms）。UF 统计系也是比较老牌了，有一些老师在做 MCMC，近年也招了一些很强的做 Causal Inference 的 AP。佛州的物价低天气好，还是很宜居的。这个项目招的人不多，据说 23Fall 大概准备招 5 个 phd。
 
 + **Biostatistics**
 
@@ -279,23 +293,23 @@ tags:
 
   + **[Harvard University](https://www.hsph.harvard.edu/biostatistics/apply/) (1)**
 
-    生统这边的“御三家”就是Harvard，JHU和UW，所以作为彩票还是要抽一下的。
+    生统这边的“御三家”就是 Harvard，JHU 和 UW，所以作为彩票还是要抽一下的。
 
   + **[Yale University](https://ysph.yale.edu/school-of-public-health/graduate-programs/master-of-science-in-public-health-msph/biostatistics/) (13)**
   
-    Yale的biostat专排虽然不高，但这毕竟是Yale，所以录取的bar也不低。他们的phd项目更是非常困难（主要是funding问题），虽然我申了他们的ms也被拒，原因未知。
+    Yale 的 biostat 专排虽然不高，但这毕竟是 Yale，所以录取的 bar 也不低。他们的 phd 项目更是非常困难（主要是 funding 问题），虽然我申了他们的 ms 也被拒，原因未知。他们还有一个mph项目。
 
   + **[University of Washington, Seattle (Thesis based)](https://www.biostat.washington.edu/apply/instructions) (3)**
 
-    UW的biostat ms分为capstone和thesis两个，capstone更偏向于招工而thesis更偏向于读博。往年thesis的cohort size很小（5个左右），今年似乎扩招了（然而我还是被拒，看拒信大概是他们从200+申请者筛出了一个90+的list然后从里面选）。
+    UW 的 biostat ms 分为 capstone 和 thesis 两个，capstone 更偏向于招工而 thesis 更偏向于读博。往年 thesis 的 cohort size 很小（5个左右），今年似乎扩招了（然而我还是被拒，看拒信大概是他们从 200+ 申请者筛出了一个 90+ 的 list 然后从里面选）。
 
   + **[University of California, Berkeley (Master of Art, M.A.-.Ph.D. track)](https://publichealth.berkeley.edu/academics/biostatistics/biostatistics-ma/) (7)**
 
-    UCB的这个MA项目录取难度和phd相比其实也没差多少（但phd显然申不到233），就当个彩票抽了（但155$的申请费真的好贵...），最后当然是脆拒。不过听说今年有人大的同学被这个项目录了。
+    UCB 的这个 MA 项目录取难度和 phd 相比其实也没差多少（但phd显然申不到233），就当个彩票抽了（但155$的申请费真的好贵...），最后当然是脆拒。不过听说今年有人大的同学被这个项目录了。
 
   + **[University of Michigan, Ann Arbor](https://sph.umich.edu/biostat/apply-ms-biostatistics.html) (4)**
 
-    UMich的这个项目近两年的发展非常诡异。本身UMich的biostat是很强的，phd项目也很好，而且喜欢从自家ms中招人，所以这个ms项目以前是非常好的。但是从近两年来突然大放海，开始狂发ad（据说22Fall发了300+/400+），基本是点击就送，现在竟然成了人手一个的保底项目，如果不嫌弃申请费的话可以顺手申一个保一下底。
+    UMich 的这个项目近两年的发展非常诡异。本身 UMich 的 biostat 是很强的，phd 项目也很好，而且喜欢从自家 ms 中招人，所以这个 ms 项目以前是非常好的。但是从近两年来突然大放海，开始狂发 ad（据说22Fall发了300+/400+），基本是点击就送，现在竟然成了人手一个的保底项目，如果不嫌弃申请费的话可以顺手申一个保一下底。
 
   + **[Columnbia University (Theory and Methods Track)](https://www.publichealth.columbia.edu/academics/degrees/master-science) (7)**
   
@@ -309,53 +323,75 @@ tags:
 
   + **[University of Pennsylvania](https://www.med.upenn.edu/ggeb/bioadmissions.html) (6)**
 
-    毕竟是暑研老板在的学校，能申的项目都申了。但这个项目的录取难度其实相当高，因为funding原因国际生名额**相当少**，最后也是不出意外的脆拒了。
+    毕竟是暑研老板在的学校，能申的项目都申了。但这个项目的录取难度其实相当高，因为 funding 原因国际生名额**相当少**，最后也是不出意外的脆拒了。
 
   + **[Johns Hopkins University](https://publichealth.jhu.edu/offices-and-services/office-of-admissions-services/how-to-apply) (1)**
 
-    脑子抽了才会去抽JHU的phd彩票（可能是以前录过清本直博的同学&负责招生的老师是你清的alumni），结果被脆拒。但你清近年有不止一位同学录了他们的ScM项目（顺带一提他们的ScM项目是有面试的）。
+    脑子抽了才会去抽 JHU 的 phd 彩票（可能是以前录过清本直博的同学&负责招生的老师是你清的 alumni），结果被脆拒。但你清近年有不止一位同学录了他们的 ScM 项目（顺带一提他们的 ScM 项目是有面试的）。
 
   + **[University of North Carolina, Chapel Hill](https://sph.unc.edu/bios/phd/) (5)**
 
-    一直很喜欢北卡，因此UNC的这个项目也是非常想去的。UNC的生统系很大，有很多非常厉害的老师，每年会发很多的ad（需要自己招老师给funding，但一般都能找到）。据说这个项目**套磁有效**，有想跟的老师可以试试（非常后悔没有提前套磁）。
+    一直很喜欢北卡，因此 UNC 的这个项目也是非常想去的。UNC的生统系很大，有很多非常厉害的老师，每年会发很多的ad（需要自己招老师给 funding，但一般都能找到）。据说这个项目**套磁有效**，有想跟的老师可以试试（非常后悔没有提前套磁）。
 
   + **[University of Minnesota, Twin Cities](https://www.sph.umn.edu/academics/degrees-programs/phd/biostatistics/admissions/) (9)**
 
-    UMN生统系规模也比较大（比隔壁统计系大hh），整体方向偏传统，感觉相比别的学校还是对本科直申友好一些的（毕竟给了我wl而不是脆拒hh）。
+    UMN 生统系规模也比较大（比隔壁统计系大hh），整体方向偏传统，感觉相比别的学校还是对本科直申友好一些的（毕竟给了我 wl 而不是脆拒hh）。
 
   + **[Duke University](https://biostat.duke.edu/education-and-training/phd-biostatistics/phd-biostatistics-admissions) (13)**
 
-    虽然专排不高，但这可是Duke.jpg 录取难度不低，不过对国际生还算友好。
+    虽然专排不高，但这可是 Duke.jpg 录取难度不低，不过对国际生还算友好。
 
   + **[Brown University](https://admissions.sph.brown.edu/requirements) (13)**
   
-    虽然专排不高，但这可是Brown.jpg 非常喜欢Brown自由的氛围，但他们系招的人也不算多，还是没有缘分）
+    虽然专排不高，但这可是 Brown.jpg 非常喜欢 Brown 自由的氛围，但他们系招的人也不算多，还是没有缘分）
 
   + **[University of Pittsburgh](https://www.sph.pitt.edu/biostatistics/admissions-aid/admissions) (19)**
   
-    UPitts的医学非常强，所以生统也不差，毕竟有很多的合作项目。但他们的bar也搞不清楚，似乎很喜欢发很长的wl养鱼。。。
+    UPitts 的医学非常强，所以生统也不差，毕竟有很多的合作项目。但他们的 bar 也搞不清楚，似乎很喜欢发很长的wl养鱼。。。
 
   + **[Rutgers University](https://sph.rutgers.edu/concentrations/biostatistics-epidemiology/degrees-phd-biostatistics.html) (34)**
 
-    SOPHAS上看到的学校，就顺手申了。毕竟New Jersey这边药厂还挺多的。然而被脆拒，后来在地里冲浪的时候看到这个项目一年只招1-3个phd，还都是偏向有master学位的学生，那没事了，避雷）
+    SOPHAS上看到的学校，就顺手申了。毕竟 New Jersey 这边药厂还挺多的。然而被脆拒，后来在地里冲浪的时候看到这个项目一年只招 1-3 个 phd，还都是偏向有 master 学位的学生，那没事了，避雷）
 
   + **[University of Florida](https://biostat.ufl.edu/education/phd-in-biostatistics/phd-how-to-apply/) (21)**
 
-    也是暑研老板推荐的项目。UF的biostat系比较新，建立起来也就才十几年，发展的还不错。这个项目的录取模式比较特殊，算是强prof，因为是committee初筛一轮之后把通过的学生资料发给老师们，然后老师从里面挑人面试并决定是否录取，所以也可以套磁试试。
+    也是暑研老板推荐的项目。UF 的 biostat 系比较新，建立起来也就才十几年，发展的还不错。这个项目的录取模式比较特殊，算是强 prof，因为是 committee 初筛一轮之后把通过的学生资料发给老师们，然后老师从里面挑人面试并决定是否录取，所以也可以套磁试试。
 
 + **Other Programs**
 
   + **[University of Pennsylvania, Applied Mathematics and Computational Science (AMCS) Ph.D.](https://www.amcs.upenn.edu/applying/general-information)**
 
-    这个项目要不是暑研老板告诉我我都不知道它的存在，还是消息太闭塞.jpg。但是了解了之后觉得这是个很好的项目。这个项目里有很多院系的老师（包括Wharton和Biostat），而且是比较少见的强prof的项目，所以说**套磁**是有必要的（我就感觉吃了没套磁的亏）。另外申请这个项目最好考一下GRE sub math（虽然没考好像也能申）。
+    这个项目要不是暑研老板告诉我我都不知道它的存在，还是消息太闭塞.jpg。但是了解了之后觉得这是个很好的项目。这个项目里有很多院系的老师（包括 Wharton 和 Biostat），而且是比较少见的强prof的项目，所以说**套磁**是有必要的（我就感觉吃了没套磁的亏）。另外申请这个项目最好考一下GRE sub math（虽然没考好像也能申）。
 
   + **[Dartmouth College, Quantitative Biomedical Science Ph.D.](https://geiselmed.dartmouth.edu/qbs/admissions/apply-to-qbs/)**
 
-    之前对大毛了解的比较少，但是偶然间看到这个项目，感觉还挺不错的，就申了（虽然被秒拒x）。这个项目**不需要申请费且不需要送分**（只需要self report），还是挺良心的，不申白不申x
+    之前对大毛了解的比较少，但是偶然间看到这个项目，感觉还挺不错的，就申了（虽然被秒拒x）。这个项目**不需要申请费且不需要送分**（只需要 self report），还是挺良心的，不申白不申x
 
 + **其他没申的项目**
 
   + 挖个坑，有空再填
+
+## 对申请结果的总结与反思
+
+首先放一下这次申请的一些数据：
+- 这次总共申请了 30 个项目，其中 21 个 phd 项目，9 个 master 项目，最后拿了 10 个 offer，总计 10/30.
+- 其中 phd 项目 6/21，master 项目 4/9.
+- 统计项目共申了 12 个，10 个 phd 5/10，两个 master 1/2，总计 6/12.
+- 生统项目总共申了 16 个，9 个 phd 1/9，7 个 master 3/7，总计 4/16.
+- 剩下两个 phd 项目 0/2.
+
+从以下几个方面来反思吧：
+
+- **选校定位的失误：低估了生统项目竞争的激烈程度。** 从我的选校也可以看出，生统项目的数量是大于统计项目的数量的，生统的 top 项目申的也更多。因为我的暑研做的是生统相关，而且感觉统计会比生统更卷，生统的申请应该会更“容易”一些。因此我当时的选校总体策略是：统计这边主申 top10-30 的 phd，生统这边则是按排名从上到下来一遍。最后出现这样的结果，我自己分析的原因可能有：
+  - 背景不够 match。我虽然暑研做的是生统，但并没有做出什么出彩的成果。自己也不是生物本/数统本出身，而且推荐人都是统计系的，没有生统系的。
+  - 最近几年生统的 bar 水涨船高升的很快，加上生统因为 funding 以及国际生名额的问题，各个学校能招的的 phd 人数相比 stat 会少很多。
+  - 从我申请季认识的有限的 data point 来看，biostat phd 申的不错的同学大都是有master学位的（还有一些美本），感觉 biostat phd 整体对于陆本直申**很不友好**（当然肯定有陆本大佬能够申到）。因此，一条更加稳妥的 biostat phd 还是先去读一个 top tier 的 biostat ms。
+
+- **套磁有时候还是必要的。** 虽说统计/生统这边大部分 phd 项目的录取都是 committee 制度的，套磁很可能无效甚至反作用，但还是有少量学校是套磁有效的（比如 UPenn AMCS、UNC biostat、UF biostat）。有些后悔没有套 AMCS 和 UNC，毕竟这两个项目都要好于最后去的项目，而且老板多多少少都有些 connection，算是申请季的一大遗憾吧。
+
+- **申请季不到最后都不要放弃，机会有时候是自己催出来的。** 统计生统的很多 phd 项目会在一月底到整个二月集中放榜，彼时各大论坛上也会涌现出非常多报 offer 的案例。这个时段要是没收到目标学校的 offer 肯定会很失落，以为自己被默拒了。但其实，这时候申请季远没有结束，只要没收到拒信，不到4月15号一切都还有可能发生（甚至 4.15 之后还有发 offer）。对于想去但还没有消息的项目，可以主动出击，询问一下自己目前的情况，大部分项目还是乐于回复的。同时积极 connect，说不定你认识的某个同学 decline 之后就轮到你了x 某种程度上我觉得我的 UMN Offer 就是这么催出来的。
+
+- **Connection is important（虽然不是all u need）。** 虽然申请季一共只面试了两次，但是两次面试的老师都和暑研老板认识。所以说 connection 还是很重要的。
 
 ## 申请材料
 
@@ -366,20 +402,20 @@ tags:
 + TOEFL&GRE
 + 文书
   + CV
-  + Statement of Purpose，简称ps或者sop
-  + Personal History Statement，简称phs
-  + 推荐信×3(RL)
+  + Statement of Purpose，简称PS或者SOP
+  + Personal History Statement，简称PHS
+  + 推荐信×3 (RL)
   + [PhD面试最好要有] 面试slides
 
-从申请季的结果来看，材料的重要性大概还是：RL(connection)$\approx$Pub>GPA>>T>G（在后面三者都过线的情况下。对于stat专业来讲大家的pub可能没那么多，那么专业相关的课程成绩还是挺重要的。）SOP则较为特殊，不同学校的重视程度不同，我个人是完全没有重视
+从申请季的结果来看，材料的重要性大概还是：RL(connection)$\approx$Pub>GPA>>T>G（在后面三者都过线的情况下。对于 stat 专业来讲大家的 pub 可能没那么多，那么专业相关的课程成绩还是挺重要的。）本科学校身在你清已经算是陆本天花板了（这个客观上我觉得给我申请季的加成还是挺多的，尽管我是转专业的），虽然比起海本还是差些。SOP 则较为特殊，不同学校的重视程度不同，我个人是完全没有重视...
 
-下面简单讲讲我的文书内容都是这么解决的：
-+ CV：在前面timeline里面也讲了，最终版的主要是找了个overleaf的template魔改了一下。CV里面把自己过去的Experience列清楚就行，我写的比较言简意赅，每段research experience大概2-3句话。
-+ SOP：我一直认为sop不是很重要，所以也没有画很多时间在写&润色上。就当是一篇比较长的英语作文写了。其中n+e大佬的sop给了我很多灵感，我基本是fit的他的[这一篇](https://trinkle23897.github.io/pdf/PS-CMU.pdf)。不过我觉得SOP主打一个真诚，把自己的心路历程写清楚了就好，最后虽然是速成的但我对SOP的自我感觉还挺好hh
-  关于SOP的润色：我主要借助了现有的工具：Grammarly修改语病等小错误，Deepl来回翻译调整句子的结构，chatGPT给一些general的修改，整体来说改动不算多。我也听说一些专门修改文书的平台（如Fiverr）能够提供不错的服务，不过我懒得试了。
-+ PHS：这个主要是加州学校要（好像也给UW交了一篇），但是作为鄙视链底层的亚男实在没什么好写的，我就主要糊了糊中学时被孤立，上大学参与领导体育社团之类的，反正不会有人看吧x
-+ RL：真的很感谢我的推荐人们，我几乎没怎么花时间在给自己写推荐信上。我的推荐信组合是非常标准的1海推+1本校科研推+1本校课程推。还是要提醒推荐信数量的问题，一定要和老师提前说好，否则需要另外找推荐人补齐。一般来说海推的重要性>>国内的推荐信，除非老师和目标学校有connection。一个凑海推的方法是想办法出去交换半年到一年，跟国外的lab打工，并且拿到课程推，这样三封推荐信可以都是海推。九字班这届受到pandemic的影响，很多人没能出得去（包括我），还是比较遗憾的。
-+ 面试slides：我没有提前准备slides，事实上整个申请季我一共也就面试了两次，而且两次老师感兴趣的都是不同的project，所以两次我都是完全重新做的。感觉面试slides只需要大概讲讲project的workflow就可以，不必focus on技术细节（除非老师提问hh），一般10-15页就行（对于15min的talk来说）。
+下面简单讲讲我的文书内容都是怎么解决的：
++ CV：在前面 timeline 里面也讲了，最终版的主要是找了个 overleaf 的 template 魔改了一下。CV 里面把自己过去的Experience 列清楚就行，我写的比较言简意赅，每段 research experience 大概 2-3 句话。
++ SOP：我一直认为 SOP 不是很重要，所以也没有画很多时间在写&润色上。就当是一篇比较长的英语作文写了。其中 n+e 大佬的 SOP 给了我很多灵感，我基本是 fit 的他的 [这一篇](https://trinkle23897.github.io/pdf/PS-CMU.pdf)。不过我觉得 SOP 主打一个真诚，把自己的心路历程写清楚了就好，所以最后虽然是速成的但我对 SOP 的自我感觉还挺好hh
+  关于 SOP 的润色：我主要借助了现有的工具：Grammarly 修改语病等小错误，Deepl 来回翻译调整句子的结构，chatGPT 给一些 general 的修改，整体来说改动不算多。我也听说一些专门修改文书的平台（如 Fiverr）能够提供不错的服务，不过我懒得试了。
++ PHS：这个主要是加州学校要（好像也给 UW 交了一篇），强调一些 minority 和 diversity 的内容。作为鄙视链底层的亚男实在没什么好写的，我就主要糊了糊中学时被孤立，上大学参与领导体育社团之类的，反正不会有人看吧x
++ RL：真的很感谢我的推荐人们，我几乎没怎么花时间在给自己写推荐信上。我的推荐信组合是非常标准的1海推+1本校科研推+1本校课程推。还是要提醒推荐信数量的问题，一定要和老师提前说好，否则需要另外找推荐人补齐。一般来说海推的重要性>>国内的推荐信，除非老师和目标学校有 connection。一个凑海推的方法是想办法出去交换半年到一年，跟国外的 lab 打工，并且拿到课程推，这样三封推荐信可以都是海推。九字班这届受到 pandemic 的影响，很多人没能出得去（包括我），还是比较遗憾的。
++ 面试 slides：我没有提前准备 slides，事实上整个申请季我一共也就面试了两次，而且两次老师感兴趣的都是不同的 project，所以两次我都是完全重新做的。感觉面试 slides 只需要大概讲讲 project 的 workflow 就可以，不必 focus on 技术细节（除非老师提问hh），一般 10-15 页就行（对于 15min 的 talk 来说）。
 
 ## 转专业选手如何自救
 
@@ -391,33 +427,46 @@ tags:
 在我刚准备出国的时候，这确实是个问题。家人和朋友也不止一次地问过我要不要找中介。而经历了申请季之后，我认为完全没有必要找中介（尤其是对于phd申请来说）。仔细想想中介能够提供的服务其实相当有限。或许以前中介可以靠着卖一些信息差来忽悠学生，但现在网上各种论坛历年来积累下来的资源已经很多了，只要花时间去查，能找到不少有用的信息，很多时候对于phd申请，中介都还没有学生了解。据我身边一些找了中介的同学反馈来看，中介的文书服务也是很一般（甚至有直接承认是机翻的），还有拿了钱就不办事的，还有系统填错的）所以我的建议是，但凡有一定的信息搜集能力，都不需要找中介，把这笔钱省下来多申几个学校不香吗x
 
 + **WES成绩认证以及SOPHAS系统**
-申请Biostat会接触到这么一个特别的系统：[SOPHAS](https://sophas.org/)。有些学校的public health相关的项目（包括biostat）会使用这个系统进行申请。这个系统有一个好处：许多材料**只需要提交一次**，包括：**成绩单、CV、推荐信和托福成绩。** 另一个好处是，使用这个系统的申请费会相对便宜。它的计费标准是：第一个项目145刀，而后面的项目都只需要55刀。
-但需要注意的是，提交给SOPHAS的成绩单需要经过WES认证，而这是一个相对比较繁琐的过程。因为需要先要在学信网完成认证，再发给WES认证，最后再寄送给SOPHAS。保守估计这整个过程将达到两个月以上，且不排除会遇到一方收不到的情况（比如我就遇到了SOPHAS死活收不到情况），所以尽量提前开始（比如八月到九月），以及时刻跟进进度。
+申请 Biostat 的话会接触到这么一个特别的系统：[SOPHAS](https://sophas.org/)。有些学校的 public health 相关的项目（包括 biostat）会使用这个系统进行申请。这个系统有一个好处：许多材料**只需要提交一次**，包括：**成绩单、CV、推荐信和托福成绩。** 另一个好处是，使用这个系统的申请费会相对便宜。它的计费标准是：第一个项目 145 刀，而后面的项目都只需要 55 刀。
+但需要注意的是，提交给 SOPHAS 的成绩单需要经过 WES 认证，而这是一个相对比较繁琐的过程。因为需要先要在学信网完成认证，再发给 WES 认证，最后再寄送给 SOPHAS。保守估计这整个过程将达到**两个月以上**，且不排除会遇到一方收不到的情况（比如我就遇到了 SOPHAS 死活收不到的情况），所以尽量提前开始（比如八月到九月），以及时刻跟进进度。
 
 + **申请总花费**
 申请交完之后闲来无事算了一下交了这么多东西一共花了多少钱：
 
-  + 申请费：(80+90+80+105+95+95+95+85+85+155+90+85+155+75+100+70+65+100+30+30+145+55*7)刀+150瑞郎=2295刀+150瑞郎
-  + 托福送分：24*146=3504￥
-  + GRE送分：30*13=390刀
+  + 申请费：(80+90+80+105+95+95+95+85+85+155+90+85+155+75+100+70+65+100+30+30+145+55*7)刀+150瑞郎 = 2295刀+150瑞郎
+  + 托福送分：24*146 = 3504￥
+  + GRE送分：30*13 = 390刀
   + WES认证：300￥+278刀
   + 总共：2963刀+3804￥+150瑞郎
-  + 换成￥：20350.48+3804+1097.48=25251.96￥
-  + 换成美元：2963+553.86+159.74=3676.6刀
+  + 换成￥：20350.48+3804+1097.48 = 25251.96￥
+  + 换成美元：2963+553.86+159.74 = 3676.6刀
   
   所以总的来看也还好，远不及高昂的中介费x
 
+- **一些觉得挺有用的link**
+  
+  - [n+e 学长的 blog](https://trinkle23897.github.io/posts/application): 我愿称之为永远滴神，不管什么方向的申请者都可以读一读
+  - [一亩三分地](https://www.1point3acres.com/bbs/): 在上面获取了非常多有用的信息（个人觉得手机app好用很多）
+  - [GradCafe](https://www.thegradcafe.com/): 知名报 offer 网站
+  - [2021 Fall CS PhD 申请回顾](https://chhzh123.github.io/blogs/2021-05-22-phd-application/)
+  - [北美博士项目申请经验 -张沥今](https://cosx.org/2022/10/tutorial-on-phd-application/): 中山大学申到 Stanford 心理 phd 的非常厉害的学姐，写的非常详细。
+  - [CS PhD 2019 Fall 申请季总结](https://zhuanlan.zhihu.com/p/60961921)
+  - [浙江大学 数学科学学院 2021 飞跃手册](http://www.math.zju.edu.cn/_upload/article/files/99/e1/32b8399349af89f05033bf19a32e/4fd486a5-8a4e-47f0-a9c1-9fdba8cae593.pdf): 记录的非常详细
+  - [上海交通大学生存手册](https://survivesjtu.gitbook.io/survivesjtumanual/)
+  - [中科大2015飞跃手册](http://www.ustc.global/wp-content/uploads/2016/01/USTC-Fly-Guide-2015.pdf)
+  - [上海交通大学留学手册 2013-2014](http://www.qianmu.org/u/file/%E4%BA%A4%E5%A4%A7%E9%A3%9E%E8%B7%83%E6%89%8B%E5%86%8C.pdf)
+
 ## 总结&致谢
 
-回想过去的一年时间，真的是感觉匆忙而又充实。虽然申请季小有遗憾，但从最终的结果来看，已经是无比幸运了。在去年的这个时候，我真的是无比焦虑，对前途感到非常的迷茫。好在遇到了各位无私帮助我的老师，以及一群志同道合的朋友们，才使得这个申请季没有那么孤单。像我这样的背景最后都能有不错的结果，后面的学弟学妹们更应该自信，只要做足了准备，肯定会有好的结果的！（有什么问题欢迎随时**email联系我**hh：清华邮箱/mariana006@foxmail.com）
+回想过去的一年时间，真的是感觉匆忙而又充实。虽然申请季小有遗憾，但从最终的结果来看，已经是无比幸运了。在去年的这个时候，我真的是无比焦虑，对前途感到非常的迷茫。好在遇到了各位无私帮助我的老师、学长们，以及一群志同道合的朋友们，才使得这个申请季没有那么孤单。像我这样的背景最后都能有不错的结果，后面的学弟学妹们更应该自信，只要做足了准备，肯定会有好的结果的！（有什么问题欢迎随时 **Email 联系我**：主页上的清华邮箱/mariana006@foxmail.com）
 
 一路走来真的有太多的人要感谢：
 
-**感谢我的三位推荐人**：Wharton的赵老师，统计中心的张老师和wljj，都是非常nice的老师，对我的申请起到了最直接的帮助。亦师亦友的感觉可能就是这样吧。
+**感谢我的三位推荐人**：Wharton 的赵老师，统计中心的张老师和 wljj，都是非常 nice 的老师，对我的申请起到了最直接的帮助。亦师亦友的感觉可能就是这样吧。
 
-**感谢那些申请路上给了我重要建议的老师们**：ld老师、tyjj、班主任李杨老师、UMN的丁老师以及UPenn的陈老师。
+**感谢那些申请路上给了我重要建议的老师们**：ld老师、tyjj、班主任李老师、UMN 的丁老师以及 UPenn 的陈老师。
 
-**感谢申请季期间互相扶持的朋友们**：予衡、老邱、V1ncent、马老师、申老师，还有许多在各个平台认识的一同申请的朋友们，大家都有了理想的去处真是太好了。
+**感谢申请季期间互相扶持的朋友们**：予衡、老邱、V1ncent、xy、马老师、申老师，还有许多在各个平台认识的一同申请的朋友们，希望大家都有理想的去处！
 
 **感谢各位无私帮助我的学长和学姐们**，你们提供的信息真的是无价的财富。
 
